// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard - LocationGroup should render correctly 1`] = `
Array [
  <Link
    className="locationLink"
    key="0"
    link="/jobCard"
    onClick={[Function]}
    title="Limit result to Pahang"
  >
    Pahang
  </Link>,
  ", ",
  <Link
    className="locationLink"
    key="1"
    link="/jobCard"
    onClick={[Function]}
    title="Limit result to Selangor"
  >
    Selangor
  </Link>,
  " > ",
  <Link
    className="locationLink"
    key="11"
    link="/jobCard"
    onClick={[Function]}
    title="Limit result to Cheras in Selangor"
  >
    Cheras
  </Link>,
  " > ",
  <span
    className="locationName"
    key="111"
  >
    Near Leisure Mall
  </span>,
]
`;

exports[`JobCard - LocationGroup should render with only last child location 1`] = `
Array [
  <Link
    className="locationLink"
    key="0"
    link="/jobCard"
    onClick={[Function]}
    title="Limit result to Pahang"
  >
    Pahang
  </Link>,
  ", ",
  <span
    className="locationName"
    key="111"
  >
    Near Leisure Mall
  </span>,
]
`;
